--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -1162,6 +1162,9 @@ on property:sys.init_log_level=*
 
 on charger
     class_start charger
+    class_stop charger
+    setprop ro.bootmode "normal"
+	setprop sys.powerctl "reboot"
 
 on property:vold.decrypt=trigger_load_persist_props
     load_persist_props
